tests/bad/question_not_ptr.oc
/// fail: Can only use ? on pointer types, got u32

def main() {
	let x = 50
	if x? {}
}